--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,9 @@ button{
     font-size: 20px;
     line-height: 29px;
 }
+img{
+    margin: 30px 0;
+}
 .mainc-section{
     padding:0 148px 0 148px;
     margin-top: 27px;
@@ -44,7 +47,9 @@ button{
 .nav-bar{
     display: flex;
     justify-content: end; 
-
+}
+.active{
+    color: red;
 }
 li{
     line-height: 29px;
@@ -100,9 +105,9 @@ li{
     height: 21px;
     border: 1px solid #000000;
 }
-.s-2-div2{
-    display: flex;
-    align-items: center;  
+.s-2-div2, .s-2-div3{
+    display: flex;  
+    vertical-align:baseline;
 }
 .s-2-div2 > .div-stick{
     margin: 11px 20px ;
@@ -149,6 +154,35 @@ li{
 .div-footer img:not(:last-child){
     margin-right: 35px;
 }
-
-
-
+.s-blog{
+    margin: 106px 0 104px 0;
+    padding: 0 205px;
+}
+.s-blog > div{
+    margin-bottom: 61px;
+}
+.s-contact{
+    max-width: 681px;
+    width: 100%;
+    margin: 0 auto; 
+    padding-top: 78px; 
+}
+.s-contact >p:first-child{   
+    font-size: 34px;
+    line-height: 50px;
+    color: #21243D;
+    margin-bottom: 30px;
+}
+.s-contact>p:nth-child(3){
+    margin-bottom: 46px;
+}
+.s-2-div3 >p:first-child{
+    background: #FF7C7C;
+    border-radius: 16px;
+    font-size: 18px;
+    width: 62px;
+    color: #FFFFFF;
+    margin-bottom: 30px;
+    text-align: center;
+    margin-right: 20px;
+}
