--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,46 @@
 body{
-    max-width: 62.5vw;
+    max-width: 80%;
     width: 100%;
     margin: 0 auto;
 }
 h1{
-    margin-bottom: 2.0833333333333335vw;
-    font-size: 2.2916666666666665vw;
-    line-height: 3.125vw;
+    margin-bottom: 40px;
+    font-size: 2.75rem;
+    line-height: 100%;
     color: #21243D;
 }
 h2{
-    font-size: 1.3541666666666667vw;
-    line-height: 1.9791666666666667vw;
-    margin-bottom: 1.0416666666666667vw;
+    font-size: 1.625rem;
+    line-height: 38px;
+    margin-bottom: 20px;
 }
 h3{
-    font-size: 1.5625vw;
-    line-height: 2.2916666666666665vw;
+    font-size: 1.875rem;
+    line-height: 44px;
     color: #21243D;
 }
 h4{
-    font-size: 1.1458333333333333vw;
-    line-height: 3.125vw;
+    font-size: 1.375rem;
+    line-height: 150%;
     color: #21243D;
 }
 p{
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 24px;
     color: #21243D;
 }
 button{
-    width: 10.833333333333334vw;
-    height: 2.4479166666666665vw;
-    margin-top:  1.40625vw;
+    width: 208px;
+    height: 47px;
+    margin-top:  27px;
     background: #FF6464;
     border: 2px solid #FFFFFF;
-    font-size: 1.0416666666666667vw;
-    line-height: 1.5104166666666667vw;
+    font-size: 1.25rem;
+    line-height: 29px;
 }
 .mainc-section{
-    padding:0 7.708333333333333vw 0 7.708333333333333vw;
-    margin-top: 1.40625vw;
+    padding:0 148px 0 148px;
+    margin-top: 27px;
 }
 .nav-bar{
     display: flex;
@@ -50,45 +50,38 @@ button{
     color: red;
 }
 li{
-    line-height: 1.5104166666666667vw;
+    line-height: 29px;
     text-align: right;
     color: #000000;
     cursor:pointer;
-    margin-right: 1.71875vw;
+    margin-right: 33px;
 }
 .s-1{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    
-    margin-top: 7.708333333333333vw;
+    margin-top: 6.25rem;
 }
 .s1-div{
-    width: 26.354166666666668vw;
+    max-width: 31rem;
 }
-.back-img{
-    background-image: url(../imige/Ellipse\ 1.png);
-    width: 13.125vw;
-    height: 26.387434554973822vh;
-    margin: 0 auto;
-    
-}
+
 /* section 2 */
 .div-p{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin:  4.947916666666667vw 0 1.3541666666666667vw 0;
+    margin:  95px 0 26px 0;
 }
 .div-p-1{
-    font-size: 1.1458333333333333vw;
-    line-height:  3.125vw;
+    font-size: 1.375rem;
+    line-height:  150%;
     color: #21243D;
 }
 .div-p-2{
-    font-size:  0.8333333333333334vw;
-    line-height: 1.25vw;
+    font-size:  1rem;
+    line-height: 24px;
     color: #00A8CC;
 }
 .s-2-div{
@@ -98,49 +91,47 @@ li{
     align-items: center;
 }
 .s-2-div1{
-    width: 21.770833333333332vw;
-    height: 15.364583333333334vw;
-    padding: 1.25vw;
+    width: 418px;
+    height: 295px;
+    padding: 24px;
 }
 .div-stick{
-    width: 0vw;
-    height: 1.09375vw;
+    height: 21px;
     border: 1px solid #000000;
+    margin:  11px  20px 
 }
 .s-2-div2, .s-2-div3{
     display: flex;  
     flex-wrap: wrap;
     vertical-align:baseline;
-}
-.s-2-div2 > .div-stick{
-    margin:  0.5729166666666666vw  1.0416666666666667vw ;
+    align-items: center;
 }
 .s-3-div1{
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 2.3958333333333335vw;
+    margin-bottom: 46px;
 }
 .img-div{
-    margin-right: 0.9375vw;
+    margin-right: 18px;
 }
 .s-3-div1-middle{
     display: flex;
     flex-wrap: wrap;
-    margin:  0.8333333333333334vw 0  0.8333333333333334vw 0;
+    margin:  16px 0  16px 0;
 }
 .div-2020{
-    width: 3.2291666666666665vw;
-    height: 1.3020833333333333vw;
+    width: 62px;
+    height: 25px;
     background: #142850;
-    border-radius:  0.8333333333333334vw;
+    border-radius:  16px;
     color: #FFFFFF;
-    font-size:  0.8333333333333334vw;
-    margin-right: 1.3541666666666667vw;
-    padding: 0  0.8333333333333334vw;
+    font-size:  1rem;
+    margin-right: 26px;
+    padding: 0  16px;
 }
 .Dashboard{
-    font-size: 1.0416666666666667vw;
-    line-height: 1.5104166666666667vw;
+    font-size: 1.25rem;
+    line-height: 29px;
     color: #8695A4;
 }
 .div-footer{
@@ -148,50 +139,77 @@ li{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin: 7.291666666666667vw 0 1.3541666666666667vw 0;
+    margin: 140px 0 26px 0;
 }
 .div-footer img{
-    margin:0 1.5104166666666667vw ;
+    margin:0 29px ;
 }
 .footer-p{
-    font-size: 0.7291666666666666vw;
-    line-height: 1.0416666666666667vw;
+    font-size: 0.875rem;
+    line-height: 20px;
     text-align: center;
     color: #21243D;
-    margin-bottom: 1.5104166666666667vw;
+    margin-bottom: 29px;
 }
 .div-footer img:not(:last-child){
-    margin-right:  1.8229166666666667vw;
+    margin-right:  35px;
 }
 .s-blog{
-    margin: 5.520833333333333vw 0 5.520833333333333vw 0;
-    padding: 0 10.677083333333334vw;
+    margin: 106px 0 106px 0;
+    padding: 0 205px;
 }
 .s-blog > div{
-    margin-bottom: 3.1770833333333335vw;
+    margin-bottom: 61px;
 }
 .s-contact{
-    max-width: 35.46875vw;
+    max-width: 681px;
     width: 100%;
     margin: 0 auto; 
-    padding-top: 4.0625vw; 
+    padding-top: 78px; 
 }
 .s-contact >p:first-child{   
-    font-size: 1.7708333333333333vw;
-    line-height: 2.6041666666666665vw;
+    font-size: 2.125rem;
+    line-height: 50px;
     color: #21243D;
-    margin-bottom: 1.5625vw;
+    margin-bottom: 30px;
 }
 .s-contact>p:nth-child(3){
-    margin-bottom: 2.3958333333333335vw;
+    margin-bottom: 46px;
 }
 .s-2-div3 >p:first-child{
     background: #FF7C7C;
-    border-radius: 0.8333333333333334vw;
-    font-size:  0.9375vw;
-    width: 3.2291666666666665vw;
+    border-radius: 16px;
+    font-size:  1rem;
+    width: 62px;
     color: #FFFFFF;
-    margin-bottom:  1.5625vw;
+    margin-bottom:  30px;
     text-align: center;
-    margin-right: 1.0416666666666667vw;
+    margin-right: 20px;
 }
+
+
+@media screen and (max-width: 912px) {
+    .mainc-section {
+        padding: 0;
+        align-items: center;
+        text-align: center;
+    }
+    .nav-bar{
+        justify-content: center;
+    }
+    .s-2-div1{
+        width: auto;
+        height: auto;
+        padding: 0
+        ;
+    }
+    .s-blog{
+        margin: auto;
+        padding: 0;
+    }
+    .s1-div .imigtag{
+        width: 100%;
+    }
+  }
+  
+    
